--- a/index.html
+++ b/index.html
@@ -5,6 +5,6 @@
     <title>Maja Nilsson</title>
   </head>
   <body>
-    <h1>Under construction</h1>
+    <h1>Under construction!</h1>
   </body>
 </html>
