--- a/index.html
+++ b/index.html
@@ -6,5 +6,8 @@
   </head>
   <body>
     <h1>Under construction!</h1>
+    <ul>
+      <li><a href="posts/test_post.html">A test post</a></li>
+    </ul>
   </body>
 </html>
